--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
             <version>1.7.25</version>
         </dependency>
         <dependency>
+            <groupId>com.googlecode.charts4j</groupId>
+            <artifactId>charts4j</artifactId>
+            <version>1.3</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
