--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.log
 *.log.*
 /target
+*.csv
 /tmp
 *.com
 *.dll
@@ -26,3 +27,6 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+
+!/src/test/resources/accounts.csv
