--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,13 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
+    <repositories>
+        <repository>
+            <id>lib</id>
+            <url>file://${project.basedir}/lib</url>
+        </repository>
+    </repositories>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -22,6 +29,11 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>com.amazonaws.athena.jdbc</groupId>
+            <artifactId>atl-athena-jdbc-driver</artifactId>
+            <version>1.1.0</version>
+        </dependency>
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-ses</artifactId>
