--- a/templates/configuration.yaml
+++ b/templates/configuration.yaml
@@ -9,7 +9,7 @@ stagingDir: s3://your-staging-dir
 
 # Keep things nice and tidy
 userOwnerRegExp: ^(?!.*excludethis|.*orexcludethis)([a-z]+\.[a-z]+)+$ # RegExp for matching on Owner tag
-generateUserReportThreshold: 0 # A minimum value for accounts to be shown. Useful for keeping the account summary table relevant
+generateReportThreshold: 0 # A minimum value for accounts to be shown. Useful for keeping the account summary table relevant
 
 # SES configuration
 region: # region used by AWS SES
